Fixed responsive to now being responsive on iPhone 7+ and down

--- a/Content/Responsive.css
+++ b/Content/Responsive.css
@@ -1,11 +1,17 @@
 /*Responsive Queries*/
 
 /*iPhone 7+ screen and under*/
-@media only screen and (min-width: 0px) and (max-width: 414px) {
+@media only screen and (min-width: 0px) and (max-width: 800px) {
     .MountWrapper {
-      height: 30%;
+      width:100%;
+      height:25%;
+      position: relative;
+    }
+    .MountPic {
+        width: 100%;
+        height: 100%;
     }
     .PortGitTxt {
-      white-space: normal;å
+      white-space: normal;
     }
 }
